--- a/index.html
+++ b/index.html
@@ -17,11 +17,43 @@
     </ul>
   </nav>
   <h1>Pagina de inicio</h1>
-  <main>
-    <article></article>
-    <article></article>
-    <article></article>
-    <article></article>
-  </main>
+  <section class="pagina1">
+
+    <section class="pagina1a">
+      <section class="pagina1a1"></section>
+    </section>
+    <section class="pagina1b">
+      <section class="pagina1b1"></section>
+    </section>
+    <section class="pagina1c">
+      <section class="pagina1c1"></section>
+    </section>
+
+    <section class="pagina1d">
+      <section class="pagina1d1"></section>
+    </section>
+    <section class="pagina1e">
+      <section class="pagina1e1"></section>
+    </section>
+
+    <section class="pagina1f">
+      <section class="pagina1x">
+        <section class="pagina1x1"></section>
+          <section class="pagina1x2"></section>
+            <section class="pagina1x3"></section>
+      </section>
+
+      <section class="pagina1g">
+      <section class="pagina1g1"></section>
+      </section>
+
+      <section class="pagina1y">
+          <section class="pagina1y1"></section>
+            <section class="pagina1y2"></section>
+              <section class="pagina1y3"></section>
+        </section>
+    </section>
+
+  </section>
 </body>
 </html>
