--- a/pages/pagina2.html
+++ b/pages/pagina2.html
@@ -17,5 +17,45 @@
     </ul>
   </nav>
   <h1>Pagina dos</h1>
+  <section class="page2">
+
+    <section class="page2a">
+      <section class="page2a1"></section>
+      <section class="page2a2"></section>
+      <section class="page2a3"></section>
+      <section class="page2a4"></section>
+    </section>
+
+      <section class="page2b">
+          <section class="page2b1"></section>
+          <section class="page2b2"></section>
+          <section class="page2b3"></section>
+          <section class="page2b4"></section>
+    </section>
+
+    <section class="page2c">
+      <section class="page2c1"></section>
+        <section class="page2c2"></section>
+    </section>
+
+    <section class="page2d">
+      <section class="page2d1"></section>
+    </section>
+
+    <section class="page2e">
+        <section class="page2e1"></section>
+      </section>
+
+      <section class="page2f">
+          <section class="page2f1"></section>
+        </section>
+
+        <section class="page2x">
+          <section class="page2x1"></section>
+          <section class="page2x2"></section>
+          <section class="page2x3"></section>
+          <section class="page2x4"></section>
+        </section>
+  </section>
 </body>
 </html>
