--- a/pages/pagina3.html
+++ b/pages/pagina3.html
@@ -17,5 +17,69 @@
     </ul>
   </nav>
   <h1>Pagina tres</h1>
+<section class="page3">
+
+<section class="page3a">
+  <section class="page3t">
+    <section class="page3o">
+      <section class="page3a1"></section>
+      <section class="page3a2"></section>
+      <section class="page3a3"></section>
+      <section class="page3a4"></section>
+      <section class="page3a5"></section>
+      <section class="page3a6"></section>
+    </section>
+  </section>
+</section>
+
+<section class="page3b">
+    <section class="page3c">
+      <section class="page3m">
+        <section class="page3b1"></section>
+        <section class="page3b2"></section>
+        <section class="page3b3"></section>
+        <section class="page3b4"></section>
+        <section class="page3b5"></section>
+        <section class="page3b6"></section>
+      </section>
+    </section>
+  </section>
+
+  <section class="page3d">
+      <section class="page3x">
+        
+
+       <section class="page3d1">
+          <section class="page3d2"></section>
+          <section class="page3d3"></section>
+         </section>
+
+          <section class="page3d4">
+              <section class="page3d5"></section>
+              <section class="page3d6"></section>
+         </section>
+
+         <section class="page3d7">
+            <section class="page3d8"></section>
+            <section class="page3d9"></section>
+        </section>
+      </section>
+      
+    <section class="page3z">
+      <section class="page3z1">
+        <section class="page3z2">
+          <section class="page3z3">
+            <section class="page3bo1"></section>
+            <section class="page3bo2"></section>
+            <section class="page3bo3"></section>
+            <section class="page3bo4"></section>
+            <section class="page3bo5"></section>
+          </section>
+        </section>
+      </section>
+    </section>
+
+</section>
+
 </body>
 </html>
