--- a/pages/pagina4.html
+++ b/pages/pagina4.html
@@ -17,5 +17,115 @@
     </ul>
   </nav>
   <h1>Pagina cuatro</h1>
+<section class="page4">
+
+  <section class="page4a">
+    <section class="page4a1"></section>
+    <section class="page4a2"></section>
+  </section>
+
+  <section class="page4b">
+    <section class="page4b1"></section>
+  </section>
+
+  <section class="page4c">
+    <section class="page4c1"></section>
+    <section class="page4c2"></section>
+  </section>
+
+  <section class="page4d">
+    <section class="page4d1"></section>
+  </section>
+
+  <section class="page4e">
+    <section class="page4e1"></section>
+    <section class="page4e2"></section>
+  </section>
+
+<section class="page4f"></section>
+
+<section class="page4g">
+<section class="page4g1">
+    <section class="page4g2"></section>
+  </section>
+
+  <section class="page4g3">
+    <section class="page4g4"></section>
+  </section>
+
+  <section class="page4g5">
+    <section class="page4g6"></section>
+    <section class="page4g7"></section>
+  </section>
+
+</section>
+
+<section class="page4h">
+  <section class="page4h1">
+    <section class="page4h2">
+      <section class="page4hd">
+        <section class="page4hd1"></section>
+      </section>
+      <section class="page4h1d">
+        <section class="page4h1d1"></section>
+      </section>
+      <section class="page4h2d">
+        <section class="page4h2d1"></section>
+      </section>
+    </section>
+  </section>
+</section>
+
+<section class="page4y">
+  <section class="page4yd">
+  <section class="page4y1">
+    <section class="page4y2"></section>
+  </section>
+  <section class="page4y3"></section>
+</section>
+</section>
+
+<section class="page4x">
+  <section class="page4xd">
+    <section class="page4x1"></section>
+  <section class="page4x2">
+    <section class="page4x3"></section>
+  </section>
+</section>
+</section>
+
+<section class="page4z">
+<section class="page4zd">
+      <section class="page4z2"></section>   
+  </section>
+</section>
+
+<section class="page4v">
+
+  <section class="page4v1">
+    <section class="page4v2"></section>
+  </section>
+
+  <section class="page4v3">
+      <section class="page4v4"></section>
+    </section>
+
+    <section class="page4v5">
+        <section class="page4v6"></section>
+      </section>
+
+      <section class="page4v7">
+         <section class="page4v8"></section>
+      </section>
+
+        <section class="page4v9">
+            <section class="page4v10"></section>
+            <section class="page4v11"></section>
+          </section>
+
+      </section>
+
+
+</section>
 </body>
 </html>
