--- a/pages/pagina5.html
+++ b/pages/pagina5.html
@@ -78,18 +78,63 @@
 <section class="page5b17">
     <section class="page5b18"></section>
   </section>
-
 </section>
 
 <section class="page5c">
 
+  <section class="page5c1">
+    <section class="page5bc2"></section>
+  </section>
 
+  <section class="page5c3">
+      <section class="page5bc4"></section>
+    </section>
+  
+    <section class="page5c5">
+        <section class="page5c6"></section>
+        <section class="page5c7"></section>
+        <section class="page5c8"></section>
+        <section class="page5c9"></section>
+    </section>
 
+    <section class="page5c10">
+        <section class="page5c11">
+          <section class="page5c12"></section>
+        </section>
+        <section class="page5c13"></section>
+    </section>
+
+    <section class="page5c14">
+        <section class="page5c15"></section>
+        <section class="page5c16"></section>
+        <section class="page5c17"></section>
+    </section>
+<section class="page5c18"></section>
 </section>
 
 <section class="page5d">
 
+<section class="page5d1">
+    <section class="page5d2">
+        <section class="page5d3"></section>
+        <section class="page5d4"></section>
+        <section class="page5d5"></section>
+    </section>
+    <section class="page5d6">
+        <section class="page5d7"></section>
+        <section class="page5d8"></section>
+        <section class="page5d9"></section>
+    </section>
 
+<section class="page5d10">
+    <section class="page5d11">
+        <section class="page5d12"></section>
+        <section class="page5d13"></section>
+        <section class="page5d14"></section>
+    </section>
+</section>
+
+</section>
 
 </section>
   </section>
