--- a/pages/pagina6.html
+++ b/pages/pagina6.html
@@ -17,5 +17,108 @@
     </ul>
   </nav>
   <h1>Pagina seis</h1>
+  <section class="page6">
+
+<section class="page6a">
+  <section class="page6a1"></section>
+  <section class="page6a2"></section>
+  <section class="page6a3"></section>
+  <section class="page6a4"></section>
+  <section class="page6a5"></section>
+</section>
+
+<section class="page6b">
+    <section class="page6b1"></section>
+    <section class="page6b2"></section>
+    <section class="page6b3"></section>
+    <section class="page6b4"></section>
+    <section class="page6b5"></section>
+  </section>
+  
+  <section class="page6c">
+    <section class="page6c1">
+      <section class="page6c2"></section>
+    </section>
+  <section class="page6c3">
+      <section class="page6c4"></section>
+    </section>
+    <section class="page6c5">
+        <section class="page6c6"></section>
+      </section>
+  </section>
+
+<section class="page6d">
+  <section  class="page6d1">
+    <section class="page6d2"></section>
+    <section class="page6d3"></section>
+  </section>
+</section>
+
+<section class="page6e">
+  <section class="page6e1">
+    <section class="page6e2"></section>
+  </section>
+  <section class="page6e3">
+      <section class="page6e4"></section>
+      <section class="page6e5"></section>
+    </section>
+</section>
+
+<section class="page6f">
+  <section class="page6f1"></section>
+</section>
+
+<section class="page6g">
+  <section class="page6g1"></section>
+  <section class="page6g2"></section>
+  <section class="page6g3"></section>  
+</section>
+
+<section class="page6x">
+    <section class="page6y1">
+        <section class="page6y2"></section>
+        <section class="page6y3"></section>
+        <section class="page6y4"></section>
+        <section class="page6y5"></section>
+      </section>
+      <section class="page6y6">
+          <section class="page6y7"></section>
+          <section class="page6y8"></section>
+          <section class="page6y9"></section>
+          <section class="page6y10"></section>
+        </section>
+        <section class="page6y11">
+            <section class="page6y12"></section>
+            <section class="page6y13"></section>
+            <section class="page6y14"></section>
+            <section class="page6y15"></section>
+          </section>
+          <section class="page6y16">
+              <section class="page6y17"></section>
+              <section class="page6y18"></section>
+              <section class="page6y19"></section>
+              <section class="page6y20"></section>
+          </section>
+
+          <section class="page6z">
+              <section class="page6z1">
+                <section class="page6z2"></section>
+                <section class="page6z3"></section>
+                <section class="page6z4"></section>
+              </section>
+            </section>
+
+            <section class="page6z5">
+                <section class="page6z6">
+                  <section class="page6z7"></section>
+                  <section class="page6z8"></section>
+                  <section class="page6z9"></section>
+                </section>
+              </section>
+
+
+</section>
+
+  </section>
 </body>
 </html>
